--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <main class="main">
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-        <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" />
+        <img src="assets/img/nyhavn.jpg" alt="" data-aos="fade-in" />
 
         <div class="container">
           <div
@@ -121,7 +121,7 @@
             </div>
           </div>
 
-          <div
+          <!-- <div
             class="row gy-4 mt-5 justify-content-center"
             data-aos="fade-up"
             data-aos-delay="200"
@@ -176,7 +176,7 @@
                 <h3><a href="">R</a></h3>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- /Hero Section -->
@@ -186,7 +186,7 @@
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="row gy-4">
             <div class="col-lg-6 order-1 order-lg-2">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/social.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-6 order-2 order-lg-1 content">
               <h3>About the tutorial</h3>
@@ -421,7 +421,7 @@
         id="schedule"
         class="call-to-action section dark-background"
       >
-        <img src="assets/img/cta-bg.jpg" alt="" />
+        <img src="assets/img/nyhavn2.jpg" alt="" />
 
         <div class="container">
           <div
