more info on material and prerequisites

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             >
               <div class="service-item position-relative">
                 <div class="icon">
-                  <i class="bi bi-easel"></i>
+                  <i class="bi bi-bounding-box-circles"></i>
                 </div>
                 <a href="service-details.html" class="stretched-link">
                   <h3>Part III: Advanced applications </h3>
@@ -406,6 +406,73 @@
                     <li>Compare the results of the previous exercise with the ones obtained by modeling the network with a graph</li>
                   </ul>
                 </p>
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div
+              class="col-lg-4 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-easel"></i>
+                </div>
+                <a href="service-details.html" class="stretched-link">
+                  <h3>Materials </h3>
+                </a>
+                <p>
+                  All materials will be available on our website and a publicly
+                  available GitHub repository beforehand. These include pre-
+                  prepared Colab/Jupyter notebooks, Python scripts, library
+                  settings, and slides. We will also use publicly available real-
+                  world networks.
+                </p>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            
+            <div
+              class="col-lg-4 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-easel"></i>
+                </div>
+                <a href="service-details.html" class="stretched-link">
+                  <h3>Additional information </h3>
+                </a>
+                <p>
+                  Participants are only required to have a browser installed
+                  on their own device and a Google account to run the Co-
+                  lab Notebooks we will make available. No specific software
+                  licenses are required, and the setup should be almost imme-
+                  diate.
+                </p>
+              </div>
+            </div>
+            <!-- End Service Item -->
+            
+            <div
+              class="col-lg-4 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <div class="service-item position-relative">
+                <div class="icon">
+                  <i class="bi bi-easel"></i>
+                </div>
+                <a href="service-details.html" class="stretched-link">
+                  <h3>Target </h3>
+                </a>
+                <p>
+                  This tutorial targets researchers interested in analyzing high-
+                  order relations in social media through the lens of hyper-
+                  graph theory and analysis. While programming experience is beneficial, it is not
+                  mandatory.
               </div>
             </div>
             <!-- End Service Item -->
