--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
                 Modeling and Mining High-order Interactions in Social Media
                 Data<span>.</span>
               </h2>
-              <p>Copenhagen, 23-26 June 2025</p>
+              <p>Copenhagen, 23 June 2025</p>
+              <p>13:00 - 17:00</p>
+              <p>Room 2.1.042 (AAU)</p>
+              <a href="https://www.icwsm.org/2025/schedule/index.html">ICWSM Schedule</a><br>
+              <a href="#contact">You can find us here!</a>
             </div>
           </div>
 
