--- a/index.html
+++ b/index.html
@@ -503,9 +503,9 @@
             <div class="col-xl-10">
               <div class="text-center">
                 <h3>Schedule</h3>
-                <p>
-                  TBA
-                </p>
+                <p>Copenhagen, 23 June 2025</p>
+                <p>13:00 - 17:00</p>
+                <p>Room 2.1.042 (AAU)</p>
                 <a class="cta-btn" href="https://www.icwsm.org/2025/" target="_blank">ICWSM25 website</a>
               </div>
             </div>
