--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="icon">
                   <i class="bi bi-activity"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Part I: Foundation & data preparation</h3>
                 </a>
                 <p>
@@ -375,7 +375,7 @@
                 <div class="icon">
                   <i class="bi bi-broadcast"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Part II: Analysis techniques</h3>
                 </a>
                 <p>
@@ -400,7 +400,7 @@
                 <div class="icon">
                   <i class="bi bi-bounding-box-circles"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Part III: Advanced applications </h3>
                 </a>
                 <p>
@@ -423,7 +423,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Materials </h3>
                 </a>
                 <p>
@@ -446,7 +446,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Additional information </h3>
                 </a>
                 <p>
@@ -469,7 +469,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="service-details.html" class="stretched-link">
+                <a href="" class="stretched-link">
                   <h3>Target </h3>
                 </a>
                 <p>
@@ -486,6 +486,31 @@
         </div>
       </section>
       <!-- /Services Section -->
+
+    <!-- Material Section -->
+    <section id="material" class="service-details section">
+
+      <div class="container">
+
+        <div class="row gy-5">
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+
+            <div class="service-box">
+              <h4>Download Material</h4>
+              <div class="download-catalog">
+                <a href="assets/material/slide.pdf" download><i class="bi bi-filetype-pdf"></i><span>Slide PDF</span></a>
+                <a href="assets/material/notebook1.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #1</span></a>
+                <a href="assets/material/notebook2.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #2</span></a>
+                <a href="assets/material/notebook3.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #3</span></a>
+              </div>
+            </div><!-- End Services List -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Service Details Section -->
 
       <!-- Call To Action Section -->
       <section
