--- a/index.html
+++ b/index.html
@@ -502,7 +502,9 @@
                 <a href="assets/material/slide.pdf" download><i class="bi bi-filetype-pdf"></i><span>Slide PDF</span></a>
                 <a href="assets/material/notebook1.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #1</span></a>
                 <a href="assets/material/notebook2.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #2</span></a>
+                <a href="assets/material/notebook2_solutions.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook Solution #2</span></a>
                 <a href="assets/material/notebook3.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook #3</span></a>
+                <a href="assets/material/notebook3_solutions.ipynb" download><i class="bi bi-file-earmark-word"></i><span>Notebook solution #3</span></a>
               </div>
             </div><!-- End Services List -->
 
